<resources>
    <string name="app_name">ALS Dispatch</string>
    <string name="action_settings">Settings</string>
    <string name="child_text">LOAD#661\n3785 BOUL LAURIER EST,QUEBEC,CA\n\nLOAD#NISD662\n3785 BOUL LAURIER EST,QUEBEC,CA</string>
    <string name="title_activity_maps_activityyy">Map</string>

    <string name="No_Trip_Assigned">No record found</string>
    <string name="Trip_Expense">Expenses</string>
    <string name="add_Expense">Add Expense</string>
    <string name="view_Expense">View Expense</string>
    <string name="expense">Expenses</string>
    <string name="messages">Messages</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="blank"></string>
    <string name="done">Done</string>
    <string name="Username">Username</string>
    <string name="crop">Crop</string>
    <string name="als_support">ALS Support</string>
    <string name="error_desc">Failed.!!  Please try again</string>

    <string name="select_expense_val">Select expense value</string>
    <string name="del_start_time">Select delivery start time</string>
    <string name="del_end_time">Select delivery end time</string>
    <string name="del_doc_type">Select document type</string>
    <string name="select_from_to_time">Select From and To date time first</string>
    <string name="end_time_should_be_greater">Delivery end time should be greater then delivery start date time.</string>
    <string name="uploadDelDocuments">Upload Delivery Documents</string>
    <string name="uploadedDocuments">Uploaded Documents</string>

    <string name="delete_expense">Delete Expense</string>
    <string name="Close">Close</string>
    <string name="Expense_type">Expense Type</string>
    <string name="Currency">Currency</string>
    <string name="Amount">Amount</string>
    <string name="Remarks_if_any">Remarks (if any)</string>
    <string name="Remarks">Remarks</string>
    <string name="Add_Scanned_Documents">Add Scanned Documents</string>
    <string name="AddDocument">Upload Document</string>
    <string name="selectDelAdd">Select delivery address</string>
    <string name="failedToUploadDoc">Failed to upload this document. Please try again.</string>
    <string name="failedToSaveImg">Failed to save the image. Please try again.</string>
    <string name="ProfileImageChanged">Profile image has been successfully changed</string>
    <string name="wantToDeleteExpense">Do you want to delete this expense?</string>
    <string name="DeleteExpense">Delete Expense</string>
    <string name="DeliveredAt">Deliver at</string>
    <string name="select_other_load">Select other load (optional)</string>

    <string name="VersionName">VersionName</string>
    <string name="Entry_Time">Entry Time</string>
    <string name="Exit_Time">Exit Time</string>
    <string name="Delivery_waiting">Delivery waiting</string>
    <string name="Delivery_waiting_time_reason">Delivery waiting time reason</string>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="location_updated_message">Location updated</string>

    <string name="can_cycle">CA Cycle</string>
    <string name="us_cycle">US Cycle</string>
    <string name="cycle_one">Cycle 1</string>
    <string name="sixty_hour">60 Hours</string>
    <string name="Driving">Driving</string>
    <string name="On_Duty">On Duty</string>
    <string name="Off_Duty">Off Duty</string>
    <string name="Sleeper">Sleeper</string>
    <string name="Violation">Violation</string>
    <string name="Start_Trip">Start Trip</string>
    <string name="Mid_Night">Mid Night</string>
    <string name="is_yard">Yard</string>
    <string name="is_private">Private</string>
    <string name="driver_confirmation">Do you want to continue with this Truck/Trailor?</string>

    <string name="usd">USD</string>
    <string name="trip_id">Trip Id </string>
    <string name="trip_no">Trip No: </string>
    <string name="trip_history">Trip History</string>
    <string name="trip_details">Trip Details</string>
    <string name="trip_number">Trip Number </string>
    <string name="trip_his_details">Trip History Details</string>
    <string name="load_no">Load No</string>
    <string name="select_load">Select Load</string>
    <string name="select_expense_reason">Select Expense Reason</string>
    <string name="select_expense_reasonnn">Select expense reason</string>
    <string name="select_Trip_No">Select Trip Number</string>
    <string name="select_trip_n">Select trip number</string>

    <string name="demo_Shipper">Demo Shipper</string>

    <string name="demo_Consignee">Demo Consignee</string>
    <string name="DATE">DATE: </string>
    <string name="NAME">NAME: </string>
    <string name="Id_No">ID NO: </string>
    <string name="co_driver">CO DRIVER:  </string>
    <string name="TRACTOR">TRACTOR: </string>
    <string name="TRAILER">TRAILER: </string>
    <string name="trips">Trips</string>
    <string name="local_trips">Local Trips</string>
    <string name="local_collections">Local Collections</string>

    <string name="SecuredLoadInfo">Secured Load Information</string>
    <string name="trailor_number">Trailer No.</string>
    <string name="seal_number">Seal No.</string>
    <string name="trailor_image">Trailer Image</string>
    <string name="seal_image">Seal Image</string>


    <string name="Multiday_Recap">Multiday Recap</string>
    <string name="seventy_day_driver">70 hours 8 days drivers</string>
    <string name="sixty_day_driver">60 hours 7 days drivers</string>
    <string name="onduty_seven_days">Total hours onduty last 7 days (</string>
    <string name="onduty_six_days">Total hours onduty last 6 days (---)</string>
    <string name="onduty_seven_days_tomorrow">Total hours available tomorrow (---)</string>
    <string name="onduty_six_days_tomorrow">Total hours available tomorrow (---)</string>
    <string name="onduty_seven_days_last_eight">Total hours onduty last 8 days (---)</string>
    <string name="onduty_seven_days_last_seven">Total hours onduty last 7 days (---)</string>

    <string name="temp_DATE">21 jun 2017</string>
    <string name="temp_time">0 hr 0 m</string>
    <string name="temp_duration">0 hr 0 m Left</string>
    <string name="SelectDate">Select Date</string>
    <string name="Select">Select</string>
    <string name="SelectJobLoadType">Select job load type</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="TRACTOR_pop">Truck   : </string>
    <string name="TRAILER_pop">Trailor : </string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="username">Username</string>


    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>

    <string name="from">From</string>
    <string name="to_only">To</string>

    <string name="email">Email</string>
    <string name="driver_log">Driver Log</string>
    <string name="share">Share</string>
    <string name="to">To: </string>
    <string name="Start_Date">Start Date </string>
    <string name="end_date">End Date </string>
    <string name="from_date">From: </string>
    <string name="date_date">Date</string>
    <string name="time_format">hh:mm</string>
    <string name="date_format">dd/mm/yyyy</string>e
    <string name="forgot_pass">Forgot Password?</string>
    <string name="profile">Profile</string>
    <string name="startDelTime">DELIVERY START TIME </string>
    <string name="endDelTime">DELIVERY END TIME</string>
    <string name="ConfirmDelivery">Confirm Delivery</string>
    <string name="select_media_type">Select Media Type</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="viewFullImage">View Full Image</string>

    <string name="profileName">Name</string>
    <string name="profileEmail">Email</string>
    <string name="profileGender">Gender</string>
    <string name="profileDob">D.O.B.</string>
    <string name="profileDLNo">DL No.</string>
    <string name="scanCode">SCAC Code</string>
    <string name="carrierCode">Carrier Code</string>
    <string name="NOT_AVAILABLE">NOT AVAILABLE</string>

    <string name="Pickup">Pickup</string>
    <string name="OnRoute">On Route</string>
    <string name="confirmLoadPickUp">Do you really want to confirm the Load Pickup?</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="confirmm">Confirm</string>
    <string name="PickupLoad">Pickup Load</string>
    <string name="DeliverAtWarehouse">Deliver at warehouse</string>
    <string name="DeliverAtConsignee">Deliver at Consignee</string>
    <string name="local_trip">local_trip</string>
    <string name="Deliver">Deliver</string>
    <string name="Arrived">Arrived</string>
   <!-- <string name=""></string>
    <string name=""></string>
    <string name=""></string>
-->

    <string name="Consigneeee">Consignee</string>
    <string name="yard">Yard</string>
    <string name="warehouse">Ware House</string>
    <string name="poNumber">PO Number</string>
    <string name="trailerNo">Trailer Number</string>
    <string name="truckNo">Truck Number</string>
    <string name="pickupComments">Pickup Comments</string>

    <string name="PickupTime">Pickup Time:</string>
    <string name="DeliveredTime">Delivered Time:</string>

    <string name="delTimeReason">DELIVERY WAITING TIME REASON</string>
    <string name="delTime">DELIVERY WAITING TIME </string>
    <string name="delComments">DELIVERY COMMENTS</string>
    <string name="indian">INDIAN</string>


<string name="copy_right">© 2015 Trucking Management System Inc. All right reserved.</string>
      <!--AIzaSyAP6vi9Qgl_5ZLlSB429zkOBpdV9zvhuXs-->

    <string name="production_map_key">AIzaSyBiACE077Br05-zVTRndfI_Y-KmWq1GPmQ</string>
    <string name="local_map_key">AIzaSyBRp2YII01RTUmZOjVnqc29E_8hh2LLWHM</string>

    <string name="expense_values">Expense Value</string>
    <string name="driver_login">Driver Login</string>
    <string name="powered_by">Powered By Arethos</string>
    <string name="expense_value">Expense Value</string>
    <string name="expense_reason">Expense Reason</string>
    <string name="expense_reason_optional">Expense Reason (Optional)</string>
    <string name="Loadno">Load#</string>
    <string name="View">View</string>
    <string name="Shipper">Shipper : </string>
    <string name="Consignee">Consignee : </string>
</resources>
