<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"

    >


    <android.support.v7.widget.CardView
        android:layout_width="@dimen/view_height_300"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/margin_10"
        app:cardElevation="@dimen/margin_short_2"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true"
        android:background="@android:color/white"
        >

        <LinearLayout
            android:id="@+id/shareFileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:background="@android:color/white"

            >

            <com.als.dispatchNew.customfont.textview.CalibriBoldTextView
                android:id="@+id/jobtitleview"
                android:layout_width="match_parent"
                android:text="@string/select_media_type"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_13"
                android:textAlignment="center"
                android:padding="@dimen/margin_short_5"
                />




            <TextView
                android:id="@+id/jobView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_text_new"
                android:layout_marginLeft="@dimen/margin_short_8"
                android:layout_marginRight="@dimen/margin_short_8"

                />

            <com.als.dispatchNew.customfont.button.CalibriBoldButton
                android:id="@+id/ViewFullImageBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:textColor="@color/popup_text"
                android:text="@string/viewFullImage"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_16"
                android:visibility="gone"

                />



            <TextView
                android:id="@+id/liveLoadingView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_text_new"
                android:visibility="gone"

                />


            <com.als.dispatchNew.customfont.button.CalibriBoldButton
                android:id="@+id/cameraBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:textColor="@color/popup_text"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_16"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_text_new"

                />

            <com.als.dispatchNew.customfont.button.CalibriBoldButton
                android:id="@+id/galleryBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:textColor="@color/popup_text"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_16"
                />





            <TextView
                android:id="@+id/deadCallView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_text_new"

                />





            <com.als.dispatchNew.customfont.button.CalibriBoldButton
                android:id="@+id/popupCancelSBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:background="@color/white"
                android:textColor="@color/popup_text"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_18"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    
    
    
</RelativeLayout>

