<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/margin_10"
        app:cardElevation="@dimen/margin_short_2"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true"
        android:background="@android:color/white"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_15"
            android:paddingRight="@dimen/margin_15"
            android:paddingTop="@dimen/margin_short_5"
            android:paddingBottom="@dimen/margin_20"
            android:background="@android:color/white"

            >


            <com.als.dispatchNew.customfont.textview.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_17"
                android:text="@string/SecuredLoadInfo"
                android:textColor="@color/app_theme_text"
                android:layout_below="@+id/logoImg"
                android:layout_marginTop="@dimen/margin_17"
                android:layout_gravity="center_horizontal"

                />



            <com.als.dispatchNew.customfont.textview.PoppinsRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:text="@string/trailor_number"
                android:textColor="@color/app_theme_text"
                android:layout_below="@+id/logoImg"
                android:layout_marginTop="@dimen/margin_18"
                android:layout_marginBottom="@dimen/margin_short_5"
                />



            <com.als.dispatchNew.customfont.edittext.PoppinsRegularEditText
                android:id="@+id/trailerNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ntextborder"
                android:textColor="@color/app_theme_text"
                android:paddingRight="@dimen/margin_10"
                android:paddingLeft="@dimen/margin_short_9"
                android:paddingTop="@dimen/margin_short_5"
                android:paddingBottom="@dimen/margin_short_5"
                android:textSize="@dimen/text_size_16"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />



            <com.als.dispatchNew.customfont.textview.PoppinsRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:text="@string/seal_number"
                android:textColor="@color/app_theme_text"
                android:layout_below="@+id/logoImg"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_short_5"
                />



            <com.als.dispatchNew.customfont.edittext.PoppinsRegularEditText
                android:id="@+id/sealNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ntextborder"
                android:textColor="@color/app_theme_text"
                android:paddingRight="@dimen/margin_10"
                android:paddingLeft="@dimen/margin_short_9"
                android:paddingTop="@dimen/margin_short_5"
                android:paddingBottom="@dimen/margin_short_5"
                android:textSize="@dimen/text_size_16"
                android:singleLine="true"
                android:imeOptions="actionDone"
                />


            <com.als.dispatchNew.customfont.textview.PoppinsRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:text="@string/trailor_image"
                android:textColor="@color/app_theme_text"
                android:layout_below="@+id/logoImg"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_short_5"
                />


                <ImageView
                    android:id="@+id/trailerImageView"
                    android:layout_width="@dimen/view_height_50"
                    android:layout_height="@dimen/view_height_50"
                    android:src="@drawable/add_pluss"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:scaleType="centerCrop"
                    />



            <com.als.dispatchNew.customfont.textview.PoppinsRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:text="@string/seal_image"
                android:textColor="@color/app_theme_text"
                android:layout_below="@+id/logoImg"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_short_5"
                />


            <ImageView
                android:id="@+id/sealImageView"
                android:layout_width="@dimen/view_height_50"
                android:layout_height="@dimen/view_height_50"
                android:src="@drawable/add_pluss"
                android:layout_marginLeft="@dimen/margin_10"
                android:scaleType="centerCrop"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_40"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/view_height_30"

                android:paddingRight="@dimen/margin_25"
                android:paddingLeft="@dimen/margin_25"
                >



                <com.als.dispatchNew.customfont.button.PoppinsMediumButton
                    android:id="@+id/cancelSecureLoadBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height_39"
                    android:text="@string/cancel"
                    android:textSize="@dimen/text_size_16"
                    android:layout_marginRight="@dimen/margin_15"
                    android:textColor="@color/white"
                    android:background="@drawable/media_selector"
                    android:textAllCaps="false"
                    android:layout_weight="1"

                    />


                <com.als.dispatchNew.customfont.button.PoppinsMediumButton
                    android:id="@+id/confirmSecureLoadBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height_39"
                    android:text="@string/confirmm"
                    android:textSize="@dimen/text_size_16"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:textColor="@color/white"
                    android:background="@drawable/red_btn_selector"
                    android:textAllCaps="false"
                    android:layout_weight="1"

                    />





            </LinearLayout>




        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>