<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nbackground"
    android:orientation="vertical"
    >




    <include
        android:id="@+id/tripActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/action_bar"
        />



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_20"

    >
    <android.support.v7.widget.CardView
        android:id="@+id/expenseCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        app:cardCornerRadius="@dimen/margin_10"
        app:cardElevation="@dimen/margin_short_2"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true"

        >

    <LinearLayout
        android:id="@+id/addExpenseLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:layout_marginVertical="@dimen/margin_15"

        >


        <com.als.dispatchNew.customfont.textview.PoppinsLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_number"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/text_size_14"

            android:layout_marginRight="@dimen/margin_15"
            android:layout_below="@+id/remarksEditText"
            />

        <com.als.dispatchNew.customfont.textview.PoppinsSemiBoldTextView
            android:id="@+id/tripNoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_short_3"
            android:layout_below="@+id/remarksEditText"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/divLineDetailView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_text_transparent"
            android:layout_marginVertical="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_10"

            />

        <com.als.dispatchNew.customfont.textview.PoppinsLightTextView
            android:id="@+id/expReasonHTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_reason"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/text_size_14"
            android:layout_below="@+id/remarksEditText"
            />


        <com.als.dispatchNew.customfont.textview.PoppinsSemiBoldTextView
            android:id="@+id/expReasonTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_short_3"
            android:layout_below="@+id/remarksEditText"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/divLineDetailView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_text_transparent"
            android:layout_marginVertical="@dimen/margin_15"
            android:layout_below="@+id/container_bar_lay"


            />



        <com.als.dispatchNew.customfont.textview.PoppinsLightTextView
            android:id="@+id/expValueHTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_value"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/text_size_14"
            android:layout_below="@+id/remarksEditText"
            />

        <com.als.dispatchNew.customfont.textview.PoppinsSemiBoldTextView
            android:id="@+id/expValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_short_3"
            android:layout_below="@+id/remarksEditText"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_text_transparent"
            android:layout_marginVertical="@dimen/margin_15"
            android:layout_below="@+id/container_bar_lay"


            />

        <com.als.dispatchNew.customfont.textview.PoppinsLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remarks_if_any"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/text_size_14"
            android:layout_below="@+id/remarksEditText"
            />

        <com.als.dispatchNew.customfont.textview.PoppinsSemiBoldTextView
            android:id="@+id/remarksTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_short_3"
            android:layout_below="@+id/remarksEditText"
            />


        <ImageView
            android:id="@+id/uploadedExpenseImgVw"
            android:layout_width="@dimen/view_height_130"
            android:layout_height="@dimen/view_height_130"
            android:visibility="gone"
            />


        <com.als.dispatchNew.customfont.button.CalibriBoldButton
            android:id="@+id/deleteExpenseBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height_45"
            android:text="@string/delete_expense"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/margin_18"
            android:paddingLeft="@dimen/margin_25"
            android:paddingRight="@dimen/margin_25"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/red_btn_selector"
            android:layout_marginTop="@dimen/view_height_30"
            android:layout_below="@+id/cardview"
            android:textAllCaps="false"

            />


    </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>

</ScrollView>


</LinearLayout>